Dynamically add tracks to participants export
