# src/EventRegistrar.Backend/Infrastructure/Mediator/IDynamicColumns.cs
@@ -1,0 +1,7 @@
+﻿namespace EventRegistrar.Backend.Infrastructure.Mediator
+{
+    public interface IDynamicColumns
+    {
+        IDictionary<string, string>? DynamicColumns { get; set; }
+    }
+}
